[package]
name = "vicuna"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.94"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tree-sitter-c2rust = "0.20.9"
wasm-bindgen = "0.2.84"

[build-dependencies]
build-target = "0.4.0"
cc="*"

[lib]
crate-type = ["cdylib"]
