[workspace]

members = [
  "crates/vic",
  "crates/vicuna-compiler",
  "crates/vicuna-runtime",
  "crates/vicuna-wasm",
]

[workspace.dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }

[workspace.metadata.groups]
default = ["path:crates/vicuna*"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
