[package]
name = "vic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.2.3", features = ["derive"] }
miette = { version = "5.8.0", features = ["fancy"] }
tracing-subscriber = "0.3.16"
vicuna-compiler = { path = "../vicuna-compiler" }
