[package]
name = "vic"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/nicholaslyang/vicuna"
license = "MIT"
description = "CLI for the Vicuna programming language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
camino = "1.1.6"
clap = { version = "4.2.3", features = ["derive"] }
colored = "2.0.4"
miette = { version = "5.8.0", features = ["fancy"] }
tracing-subscriber = "0.3.16"
vicuna-compiler = { path = "../vicuna-compiler", version = "0.1.1" }
vicuna-runtime = { path = "../vicuna-runtime", version = "0.1.1" }
