[package]
name = "vicuna-compiler"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chumsky = "0.9.2"
serde = { version = "1.0.147", features = ["derive"] }
tracing = "0.1.37"


[build-dependencies]
build-target = "0.4.0"
cc="*"


