[package]
name = "vicuna-compiler"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/nicholaslyang/vicuna"
license = "MIT"
description = "A compiler for the Vicuna programming language"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chumsky = { version = "0.9.2", default-features = false, features = ["std"] }
id-arena = "2.2.1"
miette = { version = "5.8.0", features = ["fancy"] }
serde = { version = "1.0.147", features = ["derive", "rc"] }
thiserror = "1.0.40"
tracing = "0.1.37"

[build-dependencies]
build-target = "0.4.0"
cc="1.0.83"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }


