[package]
name = "vicuna-runtime"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/nicholaslyang/vicuna"
license = "MIT"
description = "Runtime for the Vicuna programming language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
which = "4.4.0"
