[package]
name = "vicuna-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
serde_json = "1.0.94"
vicuna-compiler = { path = "../vicuna-compiler" }
wasm-bindgen = "0.2.84"

[lib]
crate-type = ["cdylib"]
