[package]
name = "vicuna-wasm"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/nicholaslyang/vicuna"
license = "MIT"
description = "Wasm interface to the Vicuna compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
console_error_panic_hook = "0.1.7"
miette = { version = "5.8.0", features = ["fancy"] }
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.94"
tracing-wasm = "0.2.1"
vicuna-compiler = { path = "../vicuna-compiler", version = "0.1.1" }
wasm-bindgen = "0.2.84"
serde = { version = "1.0.195", features = ["derive"] }
camino = "1.1.6"

[lib]
crate-type = ["cdylib"]
